# ChangeLog for app-shells/zsh-completion
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*zsh-completion-20130808.ebuild (09 Aug 2013)

  06 Nov 2013; Martin Väth <martin@mvath.de>:
  Update to new completion files

  03 Oct 2013; Martin Väth <martin@mvath.de>:
  Update to new completion files

  14 Sep 2013; Martin Väth <martin@mvath.de>:
  Bump to git-r3.eclass

  09 Aug 2013; Martin Väth <martin@mvath.de>:
  Bump version. Remove old ebuild. Add new completion files to USE

*zsh-completion-0.8.0, zsh-completion-99999999 (28 Jan 2013)

  07 Jun 2013; Martin Väth <martin@mvath.de>:
  Update live ebuild to new upstream completions.

  28 Jan 2013; Martin Väth <martin@mvath.de>:
  New ebuild from scratch.