@@ -31,32 +31,28 @@ declare -a COMPLETIONS FILES
 COMPLETIONS=()
 FILES=()
 for completion in \
-	'Android _adb _android _emulator' \
+	'+Android _adb _android _emulator' \
 	'+Gentoo _baselayout _eselect _gcc-config _genlop _gentoo_packages _gentoolkit _layman _portage _portage_utils' \
-	'Google _google' \
-	'+Unix _logger' \
-	'bumblebee _optirun' \
-	'database _redis-cli _pgsql_utils' \
-	'dev _choc _gradle _geany _manage.py _mvn _pear _play _symfony _thor _vagrant _veewee' \
-	'disk _sdd _smartmontools _srm' \
-	'distribute _celery _fab _knife _mina _mussh' \
-	'dzen _dzen2' \
-	'git _git-flow _git-pulls' \
-	'haskell _cabal' \
-	'id3 _id3 _id3v2' \
-	'managers _brew _debuild _lein _packagekit _pactree _pkcon _port _yaourt' \
-	'net _dhcpcd _httpie _mosh _socat _ssh-copy-id _vpnc _vnstat' \
-	'perf _perf' \
-	'perl _cpanm' \
-	'primus _primus' \
-	'python _bpython _pip _pygmentize _setup.py' \
-	'ruby _bundle _cap _ditz _gas _gem _gist _github _git-wtf _lunchy _rails _rvm _jekyll' \
-	'search _ack _ag _jq' \
-	'session _attach _teamocil _tmuxinator _wemux' \
-	'showoff _showoff' \
-	'subtitles _language_codes _periscope _subliminal' \
-	'virtualbox _virtualbox' \
-	'web _coffee _docpad _gradle _heroku _jonas _jmeter _jmeter-plugins _lunar _middleman _node _nvm _ralio _salt _sbt _scala _svm'
+	'+Google _google' \
+	'+Unix _dzen2 _logger' \
+	'+database _redis-cli _pgsql_utils' \
+	'+dev _choc _gradle _geany _manage.py _mvn _pear _play _symfony _thor _vagrant _veewee' \
+	'+disk _sdd _smartmontools _srm' \
+	'+distribute _celery _fab _knife _mina _mussh' \
+	'+git _git-flow _git-pulls' \
+	'+hardware _optirun _perf _primus' \
+	'+haskell _cabal' \
+	'+managers _brew _debuild _lein _packagekit _pactree _pkcon _port _yaourt' \
+	'+multimedia _id3 _id3v2 _mpv _showoff' \
+	'+net _dget _dhcpcd _httpie _mosh _socat _ssh-copy-id _vpnc _vnstat' \
+	'+perl _cpanm' \
+	'+python _bpython _pip _pygmentize _setup.py' \
+	'+ruby _bundle _cap _ditz _gas _gem _gist _github _git-wtf _lunchy _rails _rvm _jekyll' \
+	'+search _ack _ag _jq' \
+	'+session _attach _teamocil _tmuxinator _wemux' \
+	'+subtitles _language_codes _periscope _subliminal' \
+	'+virtualbox _virtualbox' \
+	'+web _coffee _docpad _gradle _heroku _jonas _jmeter _jmeter-plugins _lunar _middleman _node _nvm _ralio _salt _sbt _scala _svm'
 do	curr=${completion%% *}
 	case ${curr} in
 	'+'*)
